# SpringNote

./: AI开发提示词.txt  AI阶段提示词.txt  CHANGELOG.md  README.md
.github/scripts/: prepare_release.py  verify_update_metadata.py  write_update_metadata.py
.github/workflows/: ai-review.yml  ci.yml  release.yml
AI日报/: AI日报界面.txt
docs/: CODE_OPTIMIZATION.md  desktop.md  features.md  guide.md  index.md  models.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/en/: desktop.md  features.md  guide.md  index.md  models.md
docs/guide/: about.md  ai.md  attachments.md  daily.md  data.md  home-columns.md  home-data.md  home-input.md  home.md  markdown.md  memory-ai.md  memory-conversation.md  memory-thinking.md  memory.md  monthly.md  note-completion.md  note-search.md  notes.md  privacy.md  providers.md  quick-start.md  settings.md  shortcuts.md  statistics.md  system.md  updates.md  weekly.md  widget-settings.md  widget-wallpaper.md  workspace.md
spring_note/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
spring_note/installer/: springnote.iss
spring_note/rust/: Cargo.toml
spring_note/rust/src/: ai.rs  ai_claude.rs  ai_gemini.rs  ai_openai.rs  cloud_sync.rs  frb_generated.rs  lib.rs  markdown_links.rs  note_image_cleanup.rs  note_index.rs  report_regeneration.rs  stats.rs
spring_note/rust/src/api/: ai_api.rs  mod.rs  note_image_cleanup_api.rs  note_index_api.rs  report_api.rs
update/: LATESTCHANGELOG.md  appcast.xml  mac.json  windows.json
便签/: 便签原型.html  便签界面设计.txt
编辑器/: 编辑器界面设计.txt
首页/: 首页原型.html  首页设计.txt
(+144 files in other folders)
